fixing alignment problem on mainbar

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -44,8 +44,8 @@ a {
 
 .menu-logo {
 	float: left;
-	width: 50px;
-	height: 50px;
+	width: 32px;
+	height: 32px;
 }
 
 .banner-background {
